# Infobez

InfoBez_Lab2/: CMakeLists.txt  data.json
InfoBez_Lab2/src/: Access.cpp  ChineseWall.cpp  CommandExecutor.cpp  InfoBez_Lab2.cpp  InfoBez_Lab2.h  SparseMatrix.cpp  SparseMatrixJsonReader.cpp
lab1/: InfoBez_Lab1.cpp  hyperAlmostPermutation.cpp  hyperAlmostPermutatuion.h
